--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,32 @@
 <html>
     <head>
         <meta charset = "utf-8">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+            crossorigin="anonymous">
     </head>
     <body>
         <p>Welcome to the chat app</p>
+
+        <ol id = "messages"></ol>
+        <form id='message-form'>
+            <div class = "input-group mb-3">
+                <input name="message" class="form-control " type="text" placeholder="Message" />
+                <div class= "input-group-append">
+                     <button class="btn btn-primary btn-sm btn-block" type="submit">Send</button>
+                </div>
+            </div>
+            
+        </form>
+        <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
         <script src = "/socket.io/socket.io.js"> </script>
         <script src = "/js/index.js">
         </script>
+        
  
     </body>
 </html>
