--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
                      <button class="btn btn-primary btn-sm btn-block" type="submit">Send</button>
                 </div>
             </div>
-            
         </form>
+        <button id = "send-location" class="btn btn-secondary btn-sm" >Send Location</button>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
