--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,27 @@
 <html>
     <head>
         <meta charset = "utf-8">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-            crossorigin="anonymous">
+       <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+            crossorigin="anonymous"> -->
+            <link rel="stylesheet" href="./css/styles.css">
     </head>
-    <body>
-        <p>Welcome to the chat app</p>
-
-        <ol id = "messages"></ol>
-        <form id='message-form'>
-            <div class = "input-group mb-3">
-                <input name="message" class="form-control " type="text" placeholder="Message" />
-                <div class= "input-group-append">
-                     <button class="btn btn-primary btn-sm btn-block" type="submit">Send</button>
-                </div>
+    <body class = "chat">
+      <div class = "chat__sidebar">
+          <h3>People</h3>
+          <div id = "users"></div>
+      </div>
+      <div class = "chat__main">
+            <ol id="messages" class = "chat__messages"></ol>
+            <div class = "chat__footer">
+                <form id='message-form'>                   
+                        <input name="message" type="text" placeholder="Message" autofocus autocomplete= "off" />
+                        <button type="submit">Send</button>      
+                </form>
+                <button id="send-location">Send location</button>
             </div>
-        </form>
-        <button id = "send-location" class="btn btn-secondary btn-sm" >Send Location</button>
+      </div>
+
+        
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
