add exitRoom button

--- a/public/chat.html
+++ b/public/chat.html
@@ -8,8 +8,9 @@
     </head>
     <body class = "chat">
       <div class = "chat__sidebar">
-          <h3>People</h3>
-          <div id = "users"></div>
+        <button style="width:100%; border-bottom:1px solid" id="exit" >Exit room</button>
+        <h3 id = "room">People</h3>
+        <div id = "users"></div>
       </div>
       <div class = "chat__main">
             <ol id="messages" class = "chat__messages"></ol>
